removed padding to fix overflow-x

--- a/style.css
+++ b/style.css
@@ -15,12 +15,17 @@ header{
   width: 100%;
 }
 .nav-container {
-  margin: 10px;
-  padding: 10px;
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
+}
+
+.nav__title ul{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .nav__image {
@@ -102,7 +107,6 @@ header{
   align-items: center;
   gap: 20px;
   margin: 20px;
-  padding: 20px;
   color: #002b11;
 }
 
@@ -224,16 +228,11 @@ header{
 }
 
 /* Bestspots */
-.bestspots-container {
-  padding: 20px;
-}
-
 .bestspots__title {
   color: #002b11;
   display: flex;
   flex-direction: column;
   gap: 10px;
-  padding-left: 10%;
 }
 
 .bestspots__title h3 {
@@ -271,7 +270,6 @@ header{
   bottom: 0;
   left: 0;
   width: 100%;
-  padding: 15px;
   color: white;
   font-family: poppins, sans-serif;
   font-size: 1.2rem;
@@ -283,7 +281,6 @@ header{
   max-width: 1200px;
   width: 90%;
   margin: 20px auto;
-  padding: 0;
   display: flex;
   align-items: center;
   background-color: #f7f7f7;
@@ -309,7 +306,6 @@ header{
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
   gap: 40%;
   color: #002b11;
 }
@@ -330,7 +326,6 @@ header{
 
 /* Nearby */
 .nearby-container {
-  padding: 20px;
   height: auto;
 }
 
@@ -339,7 +334,6 @@ header{
   display: flex;
   flex-direction: column;
   gap: 10px;
-  padding-left: 10%;
   margin: 10px;
 }
 
@@ -395,7 +389,6 @@ header{
   max-width: 1200px;
   width: 90%;
   margin: 20px auto;
-  padding: 0;
   display: flex;
   align-items: center;
   background-color: #f7f7f7;
@@ -443,7 +436,6 @@ header{
 .inspiration-container {
   background-color: #f7f7f7;
   margin: auto;
-  padding: 20px;
   color: #002b11;
 }
 
@@ -502,7 +494,7 @@ header{
 
 /* Things to do—right now */
 .thingstodo-container {
-  padding: 20px;
+
   height: auto;
 }
 
@@ -572,9 +564,6 @@ header{
 }
 
 /* Iconic places you need to see */
-.iconicplaces-container {
-  padding: 20px;
-}
 
 .iconicplaces__title {
   color: #002b11;
@@ -622,7 +611,6 @@ header{
   bottom: 0;
   left: 0;
   width: 100%;
-  padding: 15px;
   color: white;
   font-size: 1.2rem;
   font-weight: bolder;
@@ -639,7 +627,6 @@ header{
   justify-content: center;
   align-items: center;
   gap: 20px;
-  padding: 20px;
   background-color: #f7f7f7;
 }
 .wanderer__image img{
@@ -649,6 +636,7 @@ header{
 
 .wanderer__title p{
   text-align: center;
+  margin: 10px;
 }
 
 .wanderer__title{
@@ -673,6 +661,7 @@ header{
   background-color:#002b11;
   color: white;
   border: none;
+  margin: 20px;
 }
 
 .wanderer__title-3 button:hover{
@@ -686,7 +675,6 @@ header{
 }
 
 .travellerschoice__container{
-  padding: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -707,6 +695,7 @@ header{
 
 .travellerschoice__image{
   max-width: 500px;
+  margin: 10px;
 }
 
 .travellerschoice__image img{
@@ -723,9 +712,6 @@ header{
 }
 
 /* Browse themed collections */
-.browsetheme-container {
-  padding: 20px;
-}
 
 .browsetheme__title {
   color: #002b11;
@@ -771,7 +757,6 @@ header{
   bottom: 20%;
   left: 0;
   width: 100%;
-  padding: 15px;
   color: white;
   font-family: poppins, sans-serif;
   font-size: 1.2rem;
@@ -781,7 +766,6 @@ header{
 /* footersection */
 footer{
   background-color: #f7f7f7;
-  padding: 40px;
   color: #002b11;
   font-weight:300;
 }
@@ -858,9 +842,10 @@ footer{
 
  @media (max-width: 500px) {
   body {
-    width: 100vw;
-    max-width: 100vw;
+    width: 100%;
+    max-width: 100%;
     overflow-x: hidden;
+    box-sizing: border-box;
   }
   .welcome__title {
       font-size: 0.9rem;
@@ -869,8 +854,15 @@ footer{
       bottom: 10%;
   }
 
+  .welcome__title p{
+    display: none;
+  }
+
   .welcome__button {
       display: none;
+  }
+  .nav__title{
+    display: none;
   }
   .travellerschoice__image img {
     width: 250px;
